--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Html
-spring.datasource.url=jdbc:postgresql://localhost:5432/bike_nepal
+spring.datasource.url=jdbc:postgresql://localhost:5432/car_rental
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
